JumpScript/tests/baselines/reference/parserStrictMode10.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode10.jump(2,12): error TS1100: Invalid use of 'eval' in strict mode.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode10.jump (1 errors) ====
    "use strict";
    function f(eval) {
               ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    }